--- a/assets/style.css
+++ b/assets/style.css
@@ -3,7 +3,8 @@
   --card_height: 266px;
   --card_width: 200px;
   --frame_color: black;
-  --select_color: gold;
+  --hover_color: gold;
+  --nav_height: 30px;
 }
 
 html {
@@ -25,13 +26,8 @@ html {
 
 body {
   background-image: linear-gradient(to top, #d5d4d0 0%, #d5d4d0 1%, #eeeeec 31%, #efeeec 75%, #e9e9e7 100%);
-  min-height: calc(100vh - 100px);
   margin: 0px;
   background-attachment: fixed;
-}
-
-.site-wrapper {
-  margin-top: 100px;
 }
 
 .nav-wrapper {
@@ -42,6 +38,7 @@ body {
   width: 100%;
   z-index: 10;
   display: flex;
+  flex-wrap: wrap;
   box-sizing: inherit;
   background: white;
   box-shadow: 0 0 15px rgba(0, 0, 0, 1);
@@ -55,7 +52,7 @@ body {
   align-items: center;
   justify-content: center;
   transition: .1s;
-  height: 30px;
+  height: var(--nav_height);
 }
 
 .title {
@@ -72,7 +69,14 @@ body {
 }
 
 #github:hover {
-  background: var(--select_color);
+  background: var(--hover_color);
+}
+
+/*SITE*/
+
+.site-wrapper {
+  margin-top: calc(50px + var(--nav_height));
+  margin-bottom: 30px;
 }
 
 .cards {
@@ -84,10 +88,10 @@ body {
   margin: auto;
 }
 
-
 .card {
   height: var(--card_height);
   border-radius: var(--radius);
+  overflow: hidden;
 }
 
 .card__photo {
@@ -155,9 +159,16 @@ body {
 }
 
 .icon:hover {
-  background: var(--select_color);
+  background: var(--hover_color);
 }
 
 @media all and (max-width:700px) {
-  /*nav reflow?*/
+  .nav-wrapper * {
+    padding-right: 3px;
+    padding-left: 3px;
+  }
+
+  #spacer {
+    display: none;
+  }
 }
