--- a/assets/style.css
+++ b/assets/style.css
@@ -29,15 +29,13 @@ html {
 }
 
 body {
-/*   background-image: linearbackground-image: linear-gradient(to top, #30cfd0 0%, #330867 100%)-gradient(to top, #d5d4d0 0%, #d5d4d0 1%, #eeeeec 31%, #efeeec 75%, #e9e9e7 100%); */
-/*   background-image: linear-gradient(to top, #dfe9f3 0%, white 100%); */
-background:
-  radial-gradient(circle at 100% 50%, transparent 26%, var(--bg-stripe) 26%, var(--bg-stripe) 29%, transparent 29%, transparent),
-  radial-gradient(circle at 0% 50%, transparent 26%, var(--bg-stripe) 26%, var(--bg-stripe) 29%, transparent 29%, transparent) 0 -50px;
-background-color: var(--bg-main);
-background-size: 75px 100px;
+  background:
+    radial-gradient(circle at 100% 50%, transparent 26%, var(--bg-stripe) 26%, var(--bg-stripe) 29%, transparent 29%, transparent),
+    radial-gradient(circle at 0% 50%, transparent 26%, var(--bg-stripe) 26%, var(--bg-stripe) 29%, transparent 29%, transparent) 0 -50px;
+  background-color: var(--bg-main);
+  background-size: 75px 100px;
   margin: 0px;
-   background-attachment: fixed;
+  background-attachment: fixed;
   font-weight: 300;
   font-size: 16px;
 }
@@ -52,8 +50,8 @@ background-size: 75px 100px;
   display: flex;
   flex-wrap: wrap;
   box-sizing: inherit;
-  background: rgba(0,0,0,0.8);
-  color:white;
+  background: rgba(0, 0, 0, 0.8);
+  color: white;
   box-shadow: 0 0 15px rgba(0, 0, 0, 1);
 }
 
@@ -80,14 +78,14 @@ background-size: 75px 100px;
   max-height: calc(var(--nav_height) * (5/8));
   margin-right: 10px;
   object-fit: contain;
-  border: 1px solid rgba(0,0,0,1);
+  border: 1px solid rgba(0, 0, 0, 1);
   border-radius: calc(var(--nav_height) * (5/16));
   filter: opacity(0.5);
 }
 
 #github:hover {
   background: var(--hover_color);
-  border: 1px solid rgba(0,0,0,1);
+  border: 1px solid rgba(0, 0, 0, 1);
   filter: opacity(1);
 }
 
@@ -96,7 +94,7 @@ background-size: 75px 100px;
 }
 
 .git:hover {
-  filter:invert(0);
+  filter: invert(0);
 }
 
 /*SITE*/
@@ -108,98 +106,47 @@ background-size: 75px 100px;
 }
 
 .cards {
-/*   width: 100%; */
-  display: grid;
   grid-template-columns: repeat(3, 300px);
-  /*grid-template-rows: repeat(auto, 400px);*/
-  grid-gap: 3.5rem;
-  /*width: 90%;*/
-  /*grid-gap: 3rem;*/
-  /*justify-content: center;*/
-  margin: auto;
 
 }
 
 .card {
-  /*margin: auto;*/
-/*   display: grid; */
   display: flex;
   flex-direction: column;
   width: 300px;
-/*   height: 420px; */
-  /*grid-template-rows: 200px auto;*/
-  box-shadow: 3px 3px 8px 3px rgba(0,0,0,.7);
-  background: rgba(0,0,0,0.7);
-/*   background-image: linear-gradient(15deg, #30cfd0 0%, #330867 100%); */
-  color:white;
-  /*height: var(--card_height);*/
-/*  display: block;
-  clear: left;*/
+  box-shadow: 3px 3px 8px 3px rgba(0, 0, 0, .7);
+  background: rgba(0, 0, 0, 0.7);
+  color: white;
   box-sizing: content-box;
-  /*margin: 10px;*/
-  /*display: flex;*/
   border-radius: var(--radius);
-  /*overflow: hidden;*/
-/*     position: absolute; */
 }
 
 .card__photo {
-  /*float: left;*/
-/*   object-fit: cover; */
   width: 300px;
-/*   height: 200px; */
   margin: 0;
   border-radius: var(--radius) var(--radius) 0 0;
 }
 
 .card__details {
-  /*float: right;*/
-  /*z-index: 2;*/
-/*   position: relative; */
-/*   top: 0; */
-/*   top: calc(-1 * var(--card_height)); */
   margin: 0;
   height: 100%;
-/*   border: 2px solid blue; */
   display: flex;
   flex-direction: column;
-/*   position: relative; */
-  /*display: grid;*/
-  /*display: flex;*/
-  /*flex-direction: column;*/
-  /*justify-content: flex-end;*/
-/*   margin: auto; */
-  /*border: 1px solid var(--frame_color);*/
-  /*border-radius: var(--radius);*/
-
 }
 
-.card__title {
-  
-  /*display: flex;*/
-  /*text-align: center;*/
-  /*color: white;*/
-  /*width: 100%;*/
-  /*font-size: 30px;*/
-  /*background: var(--frame_color);*/
-}
 
 .card__title__text {
   padding: 1rem;
-  padding-bottom:0;
-  margin:0;
+  padding-bottom: 0;
+  margin: 0;
   font-size: 26px;
   font-weight: 400;
   font-kerning: none;
   text-transform: uppercase;
-/*   text-decoration: underline; */
 }
 
-.details{
-  /*border: 1px solid green;*/
-/*   height: 100%; */
+.details {
   padding: 1rem;
-/*   padding-right: 4rem; */
   font-size: 14px;
   font-weight: 300;
   flex: 1;
@@ -209,21 +156,6 @@ background-size: 75px 100px;
 .card-footer {
   padding: 1rem;
   display: flex;
-/*   padding-top:0; */
-/*   justify-self:flex-end; */
-/*   position: relative; */
-/*   bottom: 0; */
-  /*right: 0;*/
-/*  padding: 0;
-  padding-top: 3px;
-  margin: 0;
-  display: flex;
-  min-height: 49px;
-  justify-content: space-between;
-  align-items: center;
-  background: white;
-  border-bottom-left-radius: var(--radius);
-  border-bottom-right-radius: var(--radius);*/
 }
 
 .card__tags {
@@ -234,59 +166,48 @@ background-size: 75px 100px;
 }
 
 .icons {
-display:flex;
-  flex-wrap:nowrap;
+  display: flex;
+  flex-wrap: nowrap;
 }
 
 .icon {
-/*   z-index: 2; */
-  /*margin-right: 0;*/
-  display:flex;
-/*   margin:5px; */
+  display: flex;
   margin-right: 6px;
-  /*margin-bottom: 3px;*/
-/*   border: 1px solid red; */
-/*   border-radius: 50%; */
 }
 
 .link_icon {
-
   filter: invert();
-			
 }
 
 .link_icon:hover {
 
-  filter: invert() 
-    sepia()
-		saturate(10000%)
-    hue-rotate(350deg);
+  filter: invert() sepia() saturate(10000%) hue-rotate(350deg);
 }
 
 
 @media all and (max-width:1080px) {
   .cards {
-  grid-template-columns: repeat(2, 300px);
+    grid-template-columns: repeat(2, 300px);
   }
 }
 
 @media all and (max-width:700px) {
-  
+
   .cards {
-  grid-template-columns: repeat(1, 300px);
+    grid-template-columns: repeat(1, 300px);
   }
+
   .nav-wrapper * {
     padding-right: 3px;
     padding-left: 3px;
   }
-  
+
   #spacer {
     display: none;
   }
 }
 
-@media all and (max-width:400px) {
+@media all and (max-width:415px) {
   #projects {
     display: none;
   }
-  
