changed cards to links

--- a/assets/style.css
+++ b/assets/style.css
@@ -127,6 +127,7 @@ body {
 }
 
 .card {
+  transition: 0.6s;
   display: flex;
   flex-direction: column;
   width: 300px;
@@ -135,6 +136,13 @@ body {
   color: white;
   box-sizing: content-box;
   border-radius: var(--radius);
+}
+
+.card:hover {
+  transition: 0.3s;
+  transform: scale(1.07);
+  box-shadow: 3px 3px 15px 3px rgba(0, 0, 0, 0.9);
+  cursor: pointer;
 }
 
 .card__photo {
@@ -197,6 +205,14 @@ body {
 .link_icon:hover {
   filter: invert() sepia() saturate(10000%) hue-rotate(350deg);
 }
+
+/* .card:hover .primaryLink {
+  filter: invert() sepia() saturate(10000%) hue-rotate(350deg);
+}
+
+.highlight {
+  filter: invert() sepia() saturate(10000%) hue-rotate(350deg);
+} */
 
 @media all and (max-width: 1080px) {
   .cards {
